--- a/src/main/resources/data/c/oregen/metals.json5
+++ b/src/main/resources/data/c/oregen/metals.json5
@@ -21,7 +21,7 @@
 		},
 
 		"copper": {
-			"dimensions": [ "minecraft:overworld" ],
+			"dimensions": [ "#minecraft:overworlds" ],
 			"biomes": [ "*" ],
 
 			"ore_block": "c:copper_ore",
@@ -147,59 +147,72 @@
 	},
 	"replacements": {
 		"aluminum": {
+			"#natural_stone": "c:aluminum_ore",
 			"minecraft:netherrack": "c:aluminum_nether_ore",
 			"minecraft:end_stone": "c:aluminum_end_ore"
 		},
 		"cobalt": {
+			"#natural_stone": "c:cobalt_ore",
 			"minecraft:netherrack": "c:cobalt_nether_ore",
 			"minecraft:end_stone": "c:cobalt_end_ore"
 		},
 		"copper": {
-			"#minecraft:natural_stone": "c:copper_ore",
+			"#natural_stone": "c:copper_ore",
 			"minecraft:netherrack": "c:copper_nether_ore",
 			"minecraft:end_stone": "c:copper_end_ore"
 		},
 		"iridium": {
+			"#natural_stone": "c:iridium_ore",
 			"minecraft:netherrack": "c:iridium_nether_ore",
 			"minecraft:end_stone": "c:iridium_end_ore"
 		},
 		"lead": {
+			"#natural_stone": "c:lead_ore",
 			"minecraft:netherrack": "c:lead_nether_ore",
 			"minecraft:end_stone": "c:lead_end_ore"
 		},
 		"osmium": {
+			"#natural_stone": "c:osmium_ore",
 			"minecraft:netherrack": "c:osmium_nether_ore",
 			"minecraft:end_stone": "c:osmium_end_ore"
 		},
 		"palladium": {
+			"#natural_stone": "c:palladium_ore",
 			"minecraft:netherrack": "c:palladium_nether_ore",
 			"minecraft:end_stone": "c:palladium_end_ore"
 		},
 		"platinum": {
+			"#natural_stone": "c:platinum_ore",
 			"minecraft:netherrack": "c:platinum_nether_ore",
 			"minecraft:end_stone": "c:platinum_end_ore"
 		},
 		"silver": {
+			"#natural_stone": "c:silver_ore",
 			"minecraft:netherrack": "c:silver_nether_ore",
 			"minecraft:end_stone": "c:silver_end_ore"
 		},
 		"tin": {
+			"#natural_stone": "c:tin_ore",
 			"minecraft:netherrack": "c:tin_nether_ore",
 			"minecraft:end_stone": "c:tin_end_ore"
 		},
 		"titanium": {
+			"#natural_stone": "c:titanium_ore",
 			"minecraft:netherrack": "c:titanium_nether_ore",
 			"minecraft:end_stone": "c:titanium_end_ore"
 		},
 		"tungsten": {
+			"#natural_stone": "c:tungsten_ore",
 			"minecraft:netherrack": "c:tungsten_nether_ore",
 			"minecraft:end_stone": "c:tungsten_end_ore"
 		},
 		"uranium": {
+			"#natural_stone": "c:uranium_ore",
 			"minecraft:netherrack": "c:uranium_nether_ore",
 			"minecraft:end_stone": "c:uranium_end_ore"
 		},
 		"zinc": {
+			"#natural_stone": "c:zinc_ore",
 			"minecraft:netherrack": "c:zinc_nether_ore",
 			"minecraft:end_stone": "c:zinc_end_ore"
 		},
