--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
-minecraft_version=1.14.4
-yarn_mappings=1.14.4+build.2
-loader_version=0.4.8+build.157
+minecraft_version=1.15.1
+yarn_mappings=1.15.1+build.1
+loader_version=0.7.3+build.176
 
 # Mod Properties
-mod_version=1.4.1+1.14.4
+mod_version=1.4.2+1.15.1
 maven_group=io.github.cottonmc
 archives_base_name=cotton-resources
 
 # Dependencies
-fabric_version=0.3.0+build.200
+fabric_version=0.4.27+build.286-1.15
 jankson_version=1.0.0+j1.1.2
